--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,7 @@ http {
 
     server {
         listen 80;
+        client_max_body_size 20M;
         location / {
             proxy_set_header        Host $host;
             proxy_set_header        X-Real-IP $remote_addr;
