Add medium sized photo

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,4 @@
 venv
 *pyc
 *sqlite3
-PhotoDB/media
-# Elastic Beanstalk Files
-.elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
-!.elasticbeanstalk/*.global.yml
+PhotoDB/photodb/media
