--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,5 @@ version: '3.0'
 services:
 
   app:
-    image: tuchfarber/photodb
+    build: ./
     container_name: photodb.app
-    volumes:
-      - static:/code/PhotoDB/photodb/apps/photodb/static/
-    networks:
-      - bridgenet
-
-  nginx:
-    image: nginx
-    container_name: photodb.nginx
-    volumes:
-      - static:/var/www/nginx/html/static/
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    networks:
-      - bridgenet
-    depends_on:
-      - app
-    
-volumes:
-  static:
-  mysql:
-
-networks:
-  bridgenet:
